fixed link alignment again

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -9,7 +9,12 @@ body {
   text-align: center
 }
 
-.main h2, a {
+.main h2 {
+  color: Aquamarine;
+  font-size: 16px;
+  text-align: center
+}
+.main a {
   color: Aquamarine;
   font-size: 16px;
   text-align: center
